# Motor_Ai_Simulation

./: .ai-rules  .gitignore  README.md  TASK_FOR_KILO.md  pyproject.toml
cadquery_cache/28d1d397a312c6c8/: coil_0.stl  coil_1.stl  coil_11.stl  coil_12.stl  coil_13.stl  coil_14.stl  coil_15.stl  coil_16.stl  coil_17.stl  coil_18.stl  coil_19.stl  coil_2.stl  coil_20.stl  coil_21.stl  coil_22.stl  coil_23.stl  coil_24.stl  coil_25.stl  coil_26.stl  coil_27.stl  coil_28.stl  coil_29.stl  coil_3.stl  coil_4.stl  coil_5.stl  coil_6.stl  coil_7.stl  coil_8.stl  coil_9.stl  magnet_0.stl  magnet_1.stl  magnet_10.stl  magnet_11.stl  magnet_12.stl  magnet_13.stl  magnet_14.stl  magnet_15.stl  magnet_16.stl  magnet_17.stl  magnet_18.stl  (+25 more)
cadquery_cache/3adc8b3bad741772/: coil_10.stl  coil_11.stl  coil_12.stl  coil_14.stl  coil_15.stl  coil_16.stl  coil_17.stl  coil_18.stl  coil_19.stl  coil_2.stl  coil_20.stl  coil_21.stl  coil_22.stl  coil_23.stl  coil_26.stl  coil_27.stl  coil_28.stl  coil_29.stl  coil_3.stl  coil_30.stl  coil_31.stl  coil_32.stl  coil_33.stl  coil_34.stl  coil_35.stl  coil_4.stl  coil_5.stl  coil_6.stl  coil_7.stl  coil_8.stl  coil_9.stl  magnet_0.stl  magnet_1.stl  magnet_10.stl  magnet_11.stl  magnet_12.stl  magnet_13.stl  magnet_14.stl  magnet_15.stl  magnet_16.stl  (+36 more)
config/: motor_config.yaml
examples/: dynamic_parameters.py  visualize_motor.py
plans/: synchronize_geometry.md
src/motor_ai_sim/: __init__.py  api.py  cadquery_geometry.py  config.py  fusion360_controller.py  geometry_proposal.py  modulus_bridge.py
src/motor_ai_sim/geometry/: __init__.py  motor_geometry.py  motor_material.py  motor_mesh.py
src/motor_ai_sim/utils/: __init__.py  visualization.py
tests/: __init__.py  test_geometry.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/stores/: motorStore.ts
(+13 files in other folders)
